Change settings for etherpad to work on sandstorm

--- a/settings.json.template
+++ b/settings.json.template
@@ -107,9 +107,9 @@
   */
 
   // restrict socket.io transport methods
-  "socketTransportProtocols" : ["xhr-polling", "jsonp-polling", "htmlfile"],
+  "socketTransportProtocols" : ["websocket"],
   
-  /* The toolbar buttons configuration.
+  // The toolbar buttons configuration.
   "toolbar": {
     "left": [
       ["bold", "italic", "underline", "strikethrough"],
@@ -119,14 +119,13 @@
     ],
     "right": [
       ["importexport", "timeslider", "savedrevision"],
-      ["settings", "embed"],
+      ["settings"],
       ["showusers"]
     ],
     "timeslider": [
       ["timeslider_export", "timeslider_returnToPad"]
     ]
   },
-  */
 
   /* The log level we are using, can be: DEBUG, INFO, WARN, ERROR */
   "loglevel": "INFO",
